--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           go-version: "1.23.0"
 
+      - name: Install staticcheck
+        run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+      - name: Run staticcheck
+        run: test -z $(staticcheck ./...)
+
       - name: Style
         run: test -z $(go fmt ./...)
 
